[tool.poetry]
name = "fs.googledrivefs"
packages = [
    { include = "fs"}
]
version = "2.4.1"
description = "Pyfilesystem2 implementation for Google Drive"
authors = ["Rehan Khwaja <rehan@khwaja.name>"]
license = "MIT"
homepage = "https://github.com/rkhwaja/fs.googledrivefs"
keywords = ["filesystem", "Pyfilesystem2", "google"]
readme = "README.md"
classifiers = [
	"License :: OSI Approved :: MIT License",
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11"
]

[tool.poetry.dependencies]
python = ">=3.7"
fs = ">=2.4.13"
google-api-python-client = ">=1.7.10"
google-auth = ">=1.5.1"

[tool.poetry.dev-dependencies]
pytest = ">=7.2.0"
pytest-timeout = ">=1.3.3"
requests-oauthlib = ">=1.0"
pyperclip = ">=1.7"
pytest-cov = ">=2.10.1"
poethepoet = ">=0.16.4"
pyngrok = ">=5.0.6,<6"
pytest-localserver = ">=0.5.0"
pytest-xdist = ">=3.2.1"
ruff = ">=0.0.291"

[tool.poe.tasks]
lint = "ruff fs/googledrivefs/ tests/"

[tool.poe.tasks.test]
shell = """
pytest -n 4 --cov=fs/googledrivefs --timeout=2700 || exit 1
coverage xml
"""

[tool.poetry.plugins] # Optional super table

[tool.poetry.plugins."fs.opener"]
"googledrive" = "fs.googledrivefs.opener:GoogleDriveFSOpener"

[tool.ruff]
line-length = 200
ignore = ["ANN", "D", "DTZ", "EM102", "FBT002", "FIX", "I", "N", "PT009", "PT027", "PT013", "PTH", "S101", "TCH003", "TD", "TRY003", "W191"]
select = ["ALL"]
target-version = "py37"

[tool.ruff.extend-per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["ANN201", "D103", "INP001", "PT006"]

[tool.ruff.flake8-quotes]
inline-quotes = "single"
multiline-quotes = "single"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
