[project]
name = "fs.googledrivefs"
version = "2.4.3"
description = "Pyfilesystem2 implementation for Google Drive"
maintainers = [
	{ name = "Rehan Khwaja", email = "rehan@khwaja.name" }
]
keywords = ["filesystem", "Pyfilesystem2", "google"]
readme = "README.md"
classifiers = [
	"License :: OSI Approved :: MIT License",
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "fs>=2.4.13",
    "google-api-python-client>=1.7.10",
    "google-auth>=1.5.1",
]

[project.urls]
Homepage = "https://github.com/rkhwaja/fs.googledrivefs"

[project.entry-points."fs.opener"]
"googledrive" = "fs.googledrivefs.opener:GoogleDriveFSOpener"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fs"]

[tool.poe.tasks]
lint = "ruff check fs/googledrivefs/ tests/"

[tool.poe.tasks.test]
shell = """
pytest -n 4 --reruns 2 --only-rerun TimeoutError --cov=fs/googledrivefs --timeout=2700 || exit 1
coverage xml
"""

[tool.ruff]
line-length = 200
lint.ignore = ["ANN", "D", "DTZ", "EM102", "ERA001", "FBT002", "FIX", "G004", "I", "N", "PT009", "PT027", "PT013", "PTH", "S101", "TCH003", "TD", "TRY003", "W191"]
lint.select = ["ALL"]
target-version = "py38"

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["ANN201", "D103", "INP001", "PT006"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
multiline-quotes = "single"

[tool.uv]
dev-dependencies = [
    "poethepoet>=0.16.4",
    "pyngrok>=7",
    "pyperclip>=1.7",
    "pytest-cov>=2.10.1",
    "pytest-localserver>=0.5.0",
    "pytest-rerunfailures>=14.0",
    "pytest-timeout>=1.3.3",
    "pytest-xdist>=3.2.1",
    "pytest>=7.2.0",
    "requests-oauthlib>=1.0",
    "ruff>=0.5.5",
]
