[metadata]
name = fs.googledrivefs
version = 1.0.0
author = Rehan Khwaja
author-email = rehan@khwaja.name
home-page = https://github.com/rkhwaja/fs.googledrivefs
description = Pyfilesystem2 implementation for Google Drive
long-description = file: README.rst
license = MIT
platform = any
keywords = filesystem, Pyfilesystem2, google

[options]
zip_safe = true
include_package_data = true
python_requires = >= 3.6
packages = fs.googledrivefs
install_requires =
  fs >= 2.0.7
  google-api-python-client >= 1.6.3

[bdist_wheel]
universal = 0

[options.entry_points]
fs.opener =
	googledrive = fs.googledrivefs.opener:GoogleDriveFSOpener
